# fractal-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
lib/: CMakeLists.txt
lib/drawer/: CMakeLists.txt
lib/fractal/: CMakeLists.txt
lib/fractal/include/: fractal.hpp
lib/fractal/src/: fractal.cpp
lib/fractal/tests/: FractalTest.cpp
lib/renderer/: CMakeLists.txt
lib/renderer/include/: color_mappers.hpp  gif.h  lodepng.h  renderer.hpp  renderer_general.hpp
lib/renderer/src/: color_mappers.cpp  gif.cpp  renderer.cpp  renderer_general.cpp
src/: main.cpp
